# sdf-timing-lark

./: .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  ruff.toml
.github/workflows/: docs.yml  release-please.yml  tests.yml
docs/: conf.py  index.md
docs/api/: index.md
docs/api/analysis/: diff.md  query.md  report.md  stats.md  validate.md
docs/api/core/: analysis.md  builder.md  model.md  parsing.md
docs/api/export/: export.md
docs/api/transforms/: merge.md  normalize.md
sdf_timing/: sdf.lark  sdf_lark_parser.py  sdf_transformers.py  sdfparse.py
src/: __main__.py
src/sdf_timing/: __init__.py  __main__.py  annotate.py  cli.py  export.py  model.py  pathgraph.py  sdf.lark  sdf_lark_parser.py  sdf_transformers.py  sdfparse.py  sdfwrite.py  utils.py
src/sdf_timing/analysis/: __init__.py  diff.py  export.py  pathgraph.py  query.py  report.py  stats.py  validate.py
src/sdf_timing/core/: __init__.py  builder.py  model.py  utils.py
src/sdf_timing/io/: __init__.py  annotate.py  sdfparse.py  writer.py
src/sdf_timing/io/templates/: sdf.j2
src/sdf_timing/parser/: __init__.py  parser.py  transformers.py
src/sdf_timing/templates/: delay.j2  macros.j2  sdf.j2  timingenv.j2
src/sdf_timing/tests/: parse_all_test.py
src/sdf_timing/tests/data/golden/: clb.sdf  fixpoint.sdf  spec-example2.sdf  spec-example3.sdf
src/sdf_timing/transform/: __init__.py  merge.py  normalize.py
src/sdf_toolkit/: __init__.py  __main__.py  cli.py
src/sdf_toolkit/analysis/: __init__.py  diff.py  export.py  pathgraph.py  query.py  report.py  stats.py  validate.py
src/sdf_toolkit/core/: __init__.py  builder.py  model.py  pathgraph.py
src/sdf_toolkit/io/: __init__.py  annotate.py  sdfparse.py  writer.py
src/sdf_toolkit/io/templates/: macros.j2  specify.j2  timingcheck.j2
src/sdf_toolkit/parser/: __init__.py  parser.py  transformers.py
src/sdf_toolkit/transform/: __init__.py  merge.py  normalize.py
tests/: conftest.py  parse_all_test.py  test_analysis.py  test_annotate.py  test_builder.py  test_cli.py  test_export.py  test_model.py  test_new_features.py  test_parser.py  test_pathgraph.py  test_transformers.py  test_typer_cli.py  test_utils.py  test_values_arithmetic.py
tests/data/: test_cells.v
tests/data/golden/: bigchip.sdf  celltype.sdf  clb.sdf  empty.sdf  escaped_name.sdf  fixpoint.sdf  modulo6.sdf  real_triple.sdf  spec-example1.sdf  spec-example2.sdf  spec-example3.sdf  spec-example4.sdf  test-device.sdf  test1.sdf  timings_hx1k.sdf
