[project]
name = "sdf-toolkit"
dynamic = ["version"]
description = "Python library for working Standard Delay Format (SDF) Timing Annotation files."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "F4PGA Authors", email = "f4pga-wg@lists.chipsalliance.org" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = ["lark", "jinja2", "typer>=0.24.1", "rich>=14.3.3", "networkx"]

[project.scripts]
sdf-toolkit = "sdf_toolkit.cli:main"

[project.urls]
Homepage = "https://github.com/KelvinChung2000/sdf-toolkit"

[project.optional-dependencies]
dev = ["pytest", "ruff", "pre-commit", "pytest-cov", "ty"]
docs = ["sphinx", "sphinx-rtd-theme", "myst-parser"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel]
packages = ["src/sdf_toolkit"]

[dependency-groups]
dev = ["ty>=0.0.18"]

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
python_files = ["test_*.py", "*_test.py"]
addopts = ["--doctest-modules", "--cov=sdf_toolkit", "--cov-report=term-missing"]

[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
include = ["src/", "tests/"]
